# esp-ali-smartliving

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Kconfig  README.md  component.mk
ali-smartliving-device-sdk-c/: .gitignore  CMakeLists.txt  README.md  make.settings  makefile  project.mk  sdk-c.mk
ali-smartliving-device-sdk-c/build-rules/: _rules-top.mk  rules.mk
ali-smartliving-device-sdk-c/build-rules/misc/: config.generic.cmake
ali-smartliving-device-sdk-c/components/tick_notify/: iot.mk  tick_notify.c  tick_notify.mk
ali-smartliving-device-sdk-c/components/timer_service/: CMakeLists.txt  ccronexpr.h  iot.mk  timer_service.c  timer_service.h  timer_service.mk
ali-smartliving-device-sdk-c/examples/: cJSON.h  iot.mk
ali-smartliving-device-sdk-c/examples/linkkit/: linkkit_example_cntdown.c  linkkit_example_cota.c  linkkit_example_gateway.c  linkkit_example_sched.c  linkkit_example_solo.c
ali-smartliving-device-sdk-c/examples/linkkit/certification/: ct_entry.c  ct_entry.h  ct_main.c  ct_main.h  ct_ota.c  ct_ota.h  ct_ut.c  ct_ut.h
ali-smartliving-device-sdk-c/examples/linkkit/gateway/: gateway_api.c  gateway_api.h  gateway_entry.c  gateway_entry.h  gateway_main.c  gateway_main.h  gateway_ut.c  gateway_ut.h
ali-smartliving-device-sdk-c/include/: iot_export.h
ali-smartliving-device-sdk-c/include/exports/: iot_export_awss.h  iot_export_diagnosis.h  iot_export_linkkit.h
ali-smartliving-device-sdk-c/include/imports/: iot_import_awss.h  iot_import_config.h  iot_import_ota.h
ali-smartliving-device-sdk-c/src/board/: config.esp32.aos  config.esp32s2.aos  config.freertos.esp8266  config.macos.x86  config.mk3060.aos  config.mk3080.aos  config.ubuntu.x86
ali-smartliving-device-sdk-c/src/sdk-impl/: impl_dynreg.c  impl_linkkit.c  impl_ntp.c  sdk-impl.c  sdk-impl_internal.h  sdk_reset.c
ali-smartliving-device-sdk-c/src/services/dev_diagnosis/: CMakeLists.txt  dev_diagnosis.c  dev_diagnosis.h  dev_diagnosis.mk  dev_diagnosis_log.h  dev_errcode.c  dev_errcode.h  dev_offline_ota.c  dev_offline_ota.h  dev_state_machine.c  dev_state_machine.h  diagnosis_offline_log.c  diagnosis_offline_log.h  iot.mk
ali-smartliving-device-sdk-c/src/tools/: default_settings.mk  parse_make_settings.mk
conn_mgr/: conn_mgr.c
docs/: issue_template.md
examples/awss/: CMakeLists.txt  Makefile  README.md
examples/awss/main/: app_main.c
examples/awss/sdkconfig_defaults/: sdkconfig.defaults.esp8266
examples/mqtt/mqtt_example/: CMakeLists.txt  Makefile  README.md
examples/mqtt/mqtt_example/main/: app_main.c
examples/ota/ota_example_mqtt/: CMakeLists.txt  Makefile  README.md
examples/solo/example_solo/: CMakeLists.txt  Makefile  README.md  sdkconfig_esp32.defaults  sdkconfig_esp8266.defaults
examples/solutions/smart_light/: CMakeLists.txt  Makefile  README.md
patch/: make.settings
wrappers/: wrapper_awss.c  wrapper_kv.c  wrapper_os.c  wrapper_ota.c  wrapper_product.c  wrapper_tcp.c  wrapper_tls.c  wrapper_wifi.c
(+206 files in other folders)
